--- a/visions-du-passé/src/styles/Home.css
+++ b/visions-du-passé/src/styles/Home.css
@@ -1,6 +1,9 @@
 .home-container{
+  
   width: 100vw;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  height: 100vh;
+  align-items: center;
 }
