--- a/visions-du-passé/src/index.css
+++ b/visions-du-passé/src/index.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -16,7 +16,7 @@
 body {
   margin: 0;
   display: flex;
-  /* place-items: center; */
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -56,4 +56,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
