--- a/visions-du-passé/src/styles/About.css
+++ b/visions-du-passé/src/styles/About.css
@@ -1,10 +1,15 @@
 .about-container {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+
   h1 {
     display: flex;
     justify-content: center;
   }
   h2 {
-    margin-left: 2vw;
+    display: flex;
+    justify-content: center;
   }
 }
